@@ -527,6 +527,10 @@ namespace OpenBabel
       return false;
     }
     
+    // Set the locale for number parsing to avoid locale issues: PR#1785463
+    char *old_num_locale = strdup (setlocale (LC_NUMERIC, NULL));
+  	setlocale(LC_NUMERIC, "C");
+    
     while (ifs.getline(buffer, 80)) {
 	
       tokenize(vs, buffer);
@@ -665,6 +669,10 @@ namespace OpenBabel
 	
     if (ifs)
       ifs.close();
+    
+    // Return the locale to the original state
+  	setlocale(LC_NUMERIC, old_num_locale);
+  	free (old_num_locale);
  
     return 0;
   }
